DeployingAWebApplicationOnAWS_12-02-2021.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Automation of Creating a VPC and deploying a Web App

Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: 'AWS::EC2::KeyPair::web'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: jesus-pena-vpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: public-subnet-1

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/23
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: private-subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: public-subnet-2

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/23
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: private-subnet-2

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: jesus-pena-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: jesus-pena-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Route Table

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: jesus-pena-app-sg
      GroupDescription: Allow HTTP traffic
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp:  0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp:  0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow DB access
      GroupName: jesus-pena-db-sg
      VpcId: !Ref VPC
      SecurityGroupIngress:
       IpProtocol: tcp
       FromPort: '3306'
       ToPort: '3306'
       SourceSecurityGroupId: !Ref WebServerSecurityGroup

  RDSDBSubnetGroup:
        Type: "AWS::RDS::DBSubnetGroup"
        Properties:
          DBSubnetGroupName: jesus-pena-subnet-group
          DBSubnetGroupDescription: inventory-db subnet group
          SubnetIds:
              - !Ref PrivateSubnet1
              - !Ref PrivateSubnet2

  RDSDBInstance:
        Type: AWS::RDS::DBInstance
        Properties:
          Engine: "MYSQL"
          EngineVersion: 8.0.20
          DBInstanceIdentifier: inventory
          DBInstanceClass: db.t3.micro
          StorageType: standard
          AllocatedStorage: 5
          MultiAZ: true
          DBSubnetGroupName: !Ref RDSDBSubnetGroup
          PubliclyAccessible: false
          VPCSecurityGroups:
              - !Ref DBSecurityGroup
          MasterUsername: master
          MasterUserPassword: lab-password
          CopyTagsToSnapshot: true
          AutoMinorVersionUpgrade: true
          DeletionProtection: false
          StorageEncrypted: true

  RootRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
  RolePolicies:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyName: "root"
      PolicyDocument: {
    "Version": "2012-10-17",
    "Statement": [
        {
            "Action": "ssm:*",
            "Resource": "arn:aws:ssm:*:*:parameter/inventory-app/*",
            "Effect": "Allow"
        }
    ]
}
      Roles:
        - Ref: "RootRole"
  RootInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
        - Ref: "RootRole"

  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      SecurityGroupIds:
        [!Ref WebServerSecurityGroup]
      KeyName: !Ref web
            ImageId: ami-048b05baffa30bd5f
      SubnetId:
        !Ref "PublicSubnet1"
      IamInstanceProfile:
        !Ref RootInstanceProfile
      ImageId: ami-048b05baffa30bd5f
      InstanceType: t3.micro
      UserData:
        Fn::Base64: !Sub |
         #!/bin/bash -xe
         #Install Apache Web Server and PHP
           yum update -y
           yum install -y httpd mysql
           amazon-linux-extras install -y php7.2
         # Download Lab files
           wget https://us-west-2-tcprod.s3.amazonaws.com/courses/ILT-TF-200-ARCHIT/v6.8.12/lab-2-webapp/scripts/inventory-app.zip
           unzip inventory-app.zip -d /var/www/html/
         # Download and install the AWS SDK for PHP
           wget https://github.com/aws/aws-sdk-php/releases/download/3.62.3/aws.zip
           unzip aws -d /var/www/html
         # Turn on web server
           chkconfig httpd on
           service httpd start
  MyEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      InstanceId: !Ref WebServerInstance

Outputs:
  VPC:
    Description: VPC
    Value: !Ref VPC
  AZ1:
    Description: Availability Zone 1
    Value: !GetAtt
      - PublicSubnet1
      - AvailabilityZone
  AZ2:
    Description: Availability Zone 2
    Value: !GetAtt
      - PublicSubnet2
      - AvailabilityZone
  Cluster:
    Description: The DB Cluster Name
    Value: !Ref RDSDBInstance
  SubnetGroup:
    Description: The db subnet group name
    Value: !Ref RDSDBSubnetGroup
  ElasticIp:
    Description: Elastic Ip
    Value: !Ref MyEIP
